Style password reset and fix image src

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -15,10 +15,10 @@
     }
 
     .login {
-        max-width: 300px;
+        max-width: 350px;
     }
 
-    .forgot-password, .verify-email {
+    .forgot-password, .verify-email, .reset-password {
         max-width: 500px;
     }
 }
