--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -18,7 +18,7 @@
         max-width: 350px;
     }
 
-    .forgot-password, .verify-email, .reset-password {
+    .forgot-password, .verify-email, .reset-password, .confirm-password {
         max-width: 500px;
     }
 }
