Remove confirm password

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -19,7 +19,7 @@
         max-width: 350px;
     }
 
-    .forgot-password, .verify-email, .reset-password, .confirm-password {
+    .forgot-password, .verify-email, .reset-password {
         max-width: 500px;
     }
 }
