--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -27,3 +27,23 @@
 .app {
     background: linear-gradient(225deg, hsla(0, 0%, 100%, 1) 0%, hsla(26, 100%, 88%, 1) 100%);
 }
+
+.table {
+    thead th {
+        color: $primary;
+        white-space: nowrap;
+
+        a {
+            text-decoration: none;
+        }
+    }
+
+    tbody th {
+        width: 0;
+    }
+
+    .actions {
+        width: 0;
+        white-space: nowrap;
+    }
+}
